force-app/main/default/objects/Product_Property1__c/Product_Property1__c.object-meta.xml
<CustomObject>
    <description>***DRAFT pending integration with DMS Attributes data*** Used with Product Attributes integration

* Changed to Product Property1 to facilitate change set from Test to Prod with existing Product Property object</description>
    <label>Product Property1</label>
    <nameField>
        <label>Product Properties1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Properties1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>