force-app/main/default/objects/Product_Property1__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <description>Used with Product Attribute integration</description>
    <label>Actions</label>
    <type>TextArea</type>
</CustomField>