force-app/main/default/objects/Product_Property1__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Product Attribute integratoin</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>