force-app/main/default/objects/Product_Property1__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <description>Used with Product Attribute integration</description>
    <label>Values</label>
    <type>TextArea</type>
</CustomField>